# mindora_sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
ai_memory/features/0001_docker-compose-infrastructure/: design.md  plan.md  requirements.md
ai_memory/project/: system-design.md
docs/: requirements.md
infrastructure/configs/consul/: server.json
infrastructure/configs/grafana/dashboards/: mindora-overview.json
infrastructure/configs/grafana/datasources/: prometheus.yml
infrastructure/configs/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/configs/grafana/provisioning/datasources/: datasources.yml
infrastructure/configs/nginx/: nginx.conf
infrastructure/configs/nginx/conf.d/: monitoring.conf
infrastructure/configs/prometheus/: prometheus.yml
infrastructure/configs/prometheus/rules/: infrastructure-alerts.yml
infrastructure/docker/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
infrastructure/init/consul/: kv-init.json
infrastructure/init/postgres/: 01-create-schemas.sql  02-init-data.sql
infrastructure/scripts/: setup.sh
mindora_sdk/: __init__.py
mindora_sdk/clients/: __init__.py
mindora_sdk/core/: __init__.py  exceptions.py
mindora_sdk/utils/: __init__.py
tests/: __init__.py
